# video-to-text

./: .env.example  .gitignore  README.md  app.py  mkv_to_wav.py  pyproject.toml  requirements.txt  transcribe.py
.streamlit/: config.toml
